Initial Apps2SD , Audio Improve , Glove Mode , TCP Congestion

--- a/overlay/frameworks/base/core/res/res/xml/storage_list.xml
+++ b/overlay/frameworks/base/core/res/res/xml/storage_list.xml
@@ -44,6 +44,8 @@
     <!-- external sd card -->
     <storage android:mountPoint="/storage/sdcard1"
              android:storageDescription="@string/storage_sd_card"
+			 android:allowMassStorage="true"
+			 android:externalApps="true"
              android:primary="false"
              android:removable="true" />
 
